--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".DisplayMessageActivity"
+            android:label="@string/title_activity_display_message" >
+        </activity>
+        <service android:name=".DelayedTaskService">
+            <intent-filter>
+                <action android:name="delayedTask" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
